--- a/Styles/style.css
+++ b/Styles/style.css
@@ -702,10 +702,11 @@ form#f_contact > button{
 		display: flex;
 		border: none;
 		padding-bottom: 0;
-		justify-content: flex-end;
+		justify-content: center;
 	}
 	.fa-times.menu-close{
 		position: static;
+		font-size: 24px;
 	}
 }
 @media screen and (max-width: 568px){
