--- a/Styles/style.css
+++ b/Styles/style.css
@@ -337,37 +337,62 @@ header{
 	flex-wrap: wrap;
     justify-content: normal;
 }
-
-.catalog__catalog-section__item{
+.catalog__catalog-section__items{
+	display: grid;
+	grid-gap: 25px;
+	grid-template-columns: repeat(auto-fill, minmax(180px,1fr));
+	width: 100%;
+}
+.catalog__catalog-section__items__item{
 	border: 1px solid #dfdfdf;
-    width: 150px;
+    width: 180px;
     flex-wrap: wrap;
-    padding: 12px 15px 14px;
-    margin: 25px 25px 0px 0;
     font-family: 'Proxima Nova Cn Rg';
     position: relative;
+    justify-content: center;
+	border-radius: 15px;
+	overflow: hidden;
+	transition-duration: 0.5s;
 }
-.catalog__catalog-section__item:hover{
-	border: none;
-	box-shadow: 0 0 12px #808080a8;
+.catalog__catalog-section__items__item:hover{
+	transform: translateY(-20px);
 }
-.catalog__catalog-section > a{
+.catalog__catalog-section__items > a{
 	text-decoration: none;
 	color: black;
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	justify-content: center;
 }
 .catalog__catalog-section > h2{
 	width: 100%;
-    margin: 30px 0 8px;
+    margin: 30px 0 30px;
     font-family: 'Proxima Nova Lt';
     font-size: 26px;
     font-weight: bold;
 }
-.catalog__catalog-section__item > p{
-	padding-top: 24px;
+.catalog__catalog-section__items__item > img{
+	width: 100%;
+    height: 111px;
 }
-.catalog__catalog-section__item > span{
-	padding-top: 20px;
-    color: #44b759;
+.catalog__catalog-section__items__item > p{
+	padding: 24px 0;
+}
+.catalog__catalog-section__items__item > span{
+	position: absolute;
+	bottom: 48px;
+	width: 120px;
+	text-align: center;
+	background-color: white;
+	border-radius: 20px;
+	height: 37px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	color: #44b759;
 }
 
 .container_content > div > div:nth-child(2) > a:nth-child(3) > div:before{
@@ -745,7 +770,7 @@ form#f_contact > button{
 	.catalog__catalog-section{
 		justify-content: center;
 	}
-	.catalog__catalog-section__item{
+	.catalog__catalog-section__items__item{
 		width: 100%;
 	}
 }
@@ -756,7 +781,7 @@ form#f_contact > button{
 	.container_main{
 		padding: 0px 10px;
 	}
-	.catalog__catalog-section__item{
+	.catalog__catalog-section__items__item{
 		justify-content: center;
 		-webkit-flex-direction: column;
 		-moz-flex-direction: column;
